Fixing overflow on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App {
   text-align: center;
-  overflow-x: clip;
+  overflow-x: hidden;
+  position: relative;
 }
