--- a/src/breakpoints.scss
+++ b/src/breakpoints.scss
@@ -1,2 +1,2 @@
-$breakpoint-tablet: 768px;
+$breakpoint-tablet: 844px;
 $breakpoint-mobile: 480px;
